# xaam

./: .gitignore  Dockerfile.test  README.md  XAAM_Architecture_Plan.md  XAAM_Whitepaper.md  docker-compose.test.yml  docker-compose.unittest.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.unittest  alembic.ini  keypair.json  pytest.ini  requirements.test.txt  requirements.txt  run_model_test.sh
backend/alembic/: env.py
backend/alembic/versions/: add_social_profiles_and_portfolio.py  initial_migration.py
backend/app/: __init__.py  main.py
backend/app/blockchain/: __init__.py  solana_client.py
backend/app/db/: database.py
backend/app/encryption/: db_service.py  service.py
backend/app/schemas/: __init__.py  agent.py  base.py  task.py  (+4 more)
backend/scripts/: init_db.py  run_migrations.py  run_tests.py
backend/tests/: conftest.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1747424397830-7b9634165ec24.mjs
frontend/.svelte-kit/: ambient.d.ts  tsconfig.json
frontend/src/: App.svelte  app.html  hooks.js  main.ts  svelte.d.ts
mcp/: .env.example  Dockerfile  requirements.txt  server.py
mcp/interfaces/: __init__.py  judge.py  sponsor.py  worker.py
mcp/protocol/: __init__.py  core.py
solana/: README.md  package.json
solana/programs/xaam/: Cargo.toml
solana/programs/xaam/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana/scripts/: deploy.js
solana/tests/: test_xaam.js
(+81 files in other folders)
