[package]
name = "xaam"
version = "0.1.0"
description = "Xpress AI Agent Marketplace (XAAM) Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xaam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"